rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__missing_commas_function_call.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_err(stringify! (missing_commas_function_call), \"foo(1 2 3);\")"
---
error: Expected ')'
  ┌─ missing_commas_function_call:1:1
  │
1 │ foo(1 2 3);
  │ ^^^^^ Expected ')'
