rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__missing_right_curly_bracket-2.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_err(stringify! (missing_right_curly_bracket),\n\"foreach a(x) { a = 2;\")"
---
error: Expected expression
  ┌─ missing_right_curly_bracket:1:22
  │
1 │ foreach a(x) { a = 2;
  │                      ^ Expected expression

error: Expected '}'
  ┌─ missing_right_curly_bracket:1:22
  │
1 │ foreach a(x) { a = 2;
  │                      ^ Expected '}'
