rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__missing_right_paren-4.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_err(stringify! (missing_right_paren), \"while (TRUE ;\")"
---
error: Expected ')'
  ┌─ missing_right_paren:1:12
  │
1 │ while (TRUE ;
  │            ^ Expected ')'
