rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__missing_right_paren.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_err(stringify! (missing_right_paren), \"called(me;\")"
---
error: Expected ')'
  ┌─ missing_right_paren:1:1
  │
1 │ called(me;
  │ ^^^^^^^^^ Expected ')'
