rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__missing_semicolon_assignment-2.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_err(stringify! (missing_semicolon_assignment), \"a = [1, 2, 4]\")"
---
error: Expected ';'
  ┌─ missing_semicolon_assignment:1:14
  │
1 │ a = [1, 2, 4]
  │              ^ Expected ';'
